--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -5,15 +5,10 @@
     <title>Photo Display</title>
 </head>
 <body>
-    <form action="/core/" method="post" enctype="multipart/form-data">
+    <form action="/core/image/" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ image_form }}
         <input type="submit" value="Submit" />
     </form>
-        <!--<form action="/core/" method="post" enctype="multipart/form-data">-->
-            <!--{% csrf_token %}-->
-            <!--<input type="file" name="picture" accept="image/*">-->
-            <!--<input type="submit">-->
-        <!--</form>-->
 </body>
 </html>
